--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,13 +1,16 @@
-name: CI/CD
+name: Mirror to Bitbucket Repo
 run-name: ${{github.actor}} CI/CD Pipeline on ${{github.ref_name}}
 on:
   push:
     branches-ignore:
       - " ga-ignore-"
 
+concurrency:
+  group: git-mirror
+
 jobs:
   size:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
       - name: Check the size of the repository
@@ -19,17 +22,15 @@ jobs:
             exit 1
           fi
 
-  push_to_mirror:
-    runs-on: ubuntu-latest
+  git-mirror:
+    runs-on: self-hosted
     if: github.event_name == 'push'
     steps:
-      - uses: actions/checkout@v3
+      - uses: wearerequired/git-mirror-action@v1
+        env:
+          SSH_KNOWN_HOSTS: ${{ secrets.GIT_SSH_KNOWN_HOSTS }}
+          SSH_PRIVATE_KEY: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
         with:
-          fetch-depth: 0
-      - uses: pixta-dev/repository-mirroring-action@v1
-        with:
-          target_repo_url:
-            ${{ vars.MIRROR_URL }}
-          ssh_private_key:
-            ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-        name: Push to mirror repository
+          source-repo: "${{ github.repository }}"
+          destination-repo: "${{ vars.MIRROR_URL }}"
+        name: Mirror to Bitbucket Repo
